# Mia-My-Interview-Assistant

./: README.md
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/models/: evaluation.rs
